--- a/point-of-sale-app/payments/pom.xml
+++ b/point-of-sale-app/payments/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.abm-edge</groupId>
+			<artifactId>service-sdk</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
