--- a/point-of-sale-app/api-server/pom.xml
+++ b/point-of-sale-app/api-server/pom.xml
@@ -7,9 +7,9 @@
 		<artifactId>abm-edge-usecase</artifactId>
 		<version>1.0</version>
 	</parent>
-	<artifactId>inventory</artifactId>
-	<name>inventory</name>
-	<description>Application to manage inventory for the Edge Use case workload</description>
+	<artifactId>api-server</artifactId>
+	<name>api-server</name>
+	<description>The api-server proxy for the Edge Use case workload</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -43,11 +43,6 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.7</version>
 		</dependency>
-		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.29</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -64,6 +59,32 @@
 				<configuration>
 					<addResources>true</addResources>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy Vue.js UI content</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>src/main/resources/public</outputDirectory>
+							<overwrite>true</overwrite>
+							<resources>
+								<resource>
+									<directory>${project.parent.basedir}/ui/target/dist</directory>
+									<includes>
+										<include>static/</include>
+										<include>index.html</include>
+										<include>favicon.ico</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
