--- a/point-of-sale-app/service-sdk/pom.xml
+++ b/point-of-sale-app/service-sdk/pom.xml
@@ -4,13 +4,15 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.google.abm-edge</groupId>
+  <parent>
+    <groupId>com.google.abm-edge</groupId>
+    <artifactId>abm-edge-usecase</artifactId>
+    <version>1.0</version>
+  </parent>
   <artifactId>service-sdk</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>service-sdk</name>
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
-
 </project>
