--- a/point-of-sale-app/api-server/pom.xml
+++ b/point-of-sale-app/api-server/pom.xml
@@ -31,7 +31,12 @@
 		<dependency>
 			<groupId>com.google.abm-edge</groupId>
 			<artifactId>service-sdk</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.abm-edge</groupId>
+			<artifactId>ui</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
