--- a/point-of-sale-app/payments/pom.xml
+++ b/point-of-sale-app/payments/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.google.abm-edge</groupId>
 			<artifactId>service-sdk</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
