--- a/point-of-sale-app/ui/package.json
+++ b/point-of-sale-app/ui/package.json
@@ -14,11 +14,16 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.4",
     "firebaseui": "^4.7.1",
+    "mosha-vue-toastify": "^1.0.20",
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
+    "vt-notifications": "^0.4.1",
     "vue": "^2.6.11",
     "vue-audio-recorder": "^3.0.1",
+    "vue-dropdowns": "^1.1.2",
+    "vue-dynamic-dropdown": "^1.0.12",
     "vue-socket.io": "^3.0.10",
+    "vue-toast-notification": "^0.6.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
