--- a/point-of-sale-app/frontend/pom.xml
+++ b/point-of-sale-app/frontend/pom.xml
@@ -122,21 +122,18 @@
   <distributionManagement>
     <snapshotRepository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-usecase-workload
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/anthos-edge-workload</url>
     </snapshotRepository>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-usecase-workload
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/anthos-edge-workload</url>
     </repository>
   </distributionManagement>
 
   <repositories>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-usecase-workload
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/anthos-edge-workload</url>
       <releases>
         <enabled>true</enabled>
       </releases>
