--- a/point-of-sale-app/ui/pom.xml
+++ b/point-of-sale-app/ui/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>com.google.abm-edge</groupId>
 		<artifactId>abm-edge-usecase</artifactId>
-		<version>1.0</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ui</artifactId>
 
