--- a/point-of-sale-app/api-server/pom.xml
+++ b/point-of-sale-app/api-server/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>com.google.abm-edge</groupId>
 			<artifactId>ui</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
