--- a/anthos-baremetal-edge-deployment/inventory/host_vars/nuc-6.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/nuc-6.yaml
@@ -11,10 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# Cluster Name
+cluster_name: "nuc-4"
+# Used for logging/metrics
+machine_label: "nuc-6"
 
-cluster_name: "nuc-6"
-cluster_index: 5
-acm_cluster_name: "store-2-3"
+# This machine's IP
 control_plane_ip: "192.168.1.16"
-
-primary_ip: "192.168.1.14"
