--- a/anthos-baremetal-edge-deployment/roles/google-tools/tasks/main.yml
+++ b/anthos-baremetal-edge-deployment/roles/google-tools/tasks/main.yml
@@ -16,25 +16,31 @@
 
   # Credentials
 
+### The /etc/profile.d/gcloud_auth.sh requires it readable for all users
   - name: Create the temp keys directory
     file:
       path: '{{ remote_gsa_key }}'
       state: directory
-      mode: '0700'
+      mode: '0755'
+      group: 'root'
+      owner: 'root'
     tags:
     - initial-install
     - tool-authentication
 
+### The /etc/profile.d/gcloud_auth.sh requires it readable for all users
   - name: Get the SA key to initialize gcloud with
     copy:
       src: '{{ local_gsa_key }}'
       dest: '{{ remote_gsa_key }}/gsa-key.json'
-      mode: '0400' # read only by user
+      mode: '0444' # read only
+      group: 'root'
+      owner: 'root'
     tags:
     - initial-install
     - tool-authentication
 
-  ##### gcloud
+##### gcloud
 
   - name: Create the tools temp directory
     file:
@@ -74,59 +80,64 @@
     - initial-install
     - tool-install
 
-### Setup Path & Auto-complete
+### Set up application default credentials
+  - name: Setting up Google App Creds for non-interactive shells
+    lineinfile:
+      path: /etc/environment
+      line: 'GOOGLE_APPLICATION_CREDENTIALS="/var/keys/gsa-key.json"'
+    tags:
+    - profile
+    - initial-install
+    - non-interactive-shell
 
-### TODO: If the requirement is to have all users access gcloud, kubectl, etc...then add the GOOGLE_APPLICATION_CREDENTIALS here along with common location & chmod
-  - name: Add gcloud and tools to PATH
-    blockinfile:
+#### Setting up non-interactive PATH for gcloud
+  - name: Add gcloud to PATH on all shells (including non-interactive)
+    lineinfile:
+      path: /etc/environment
+      regexp: 'PATH="(\/usr\/local\/sbin:\/usr\/local\/bin:\/usr\/sbin:\/usr\/bin:\/sbin:\/bin:\/usr\/games:\/usr\/local\/games:\/snap\/bin)"$' #uugghhly...but works
+      line: 'PATH="\1:/var/google-tools-install/google-cloud-sdk/bin"'
+      backrefs: yes
+      state: present
+    tags:
+    - profile
+    - initial-install
+    - non-interactive-shell
+
+## Set up auto-complete
+  - name: Add gcloud BASH completion
+    lineinfile:
       path: /etc/profile.d/bash_completion.sh
-      block: |
-        # The next line updates PATH for the Google Cloud SDK.
-        if [ -f '/var/google-tools-install/google-cloud-sdk/path.bash.inc' ]; then source '/var/google-tools-install/google-cloud-sdk/path.bash.inc'; fi
-
-        # The next line enables shell command completion for gcloud.
-        if [ -f '/var/google-tools-install/google-cloud-sdk/completion.bash.inc' ]; then source '/var/google-tools-install/google-cloud-sdk/completion.bash.inc'; fi
-      marker: "# { mark } Added by Ansible google-tools task"
+      line: "if [ -f '/var/google-tools-install/google-cloud-sdk/completion.bash.inc' ]; then source '/var/google-tools-install/google-cloud-sdk/completion.bash.inc'; fi"
     tags:
     - profile
     - initial-install
+    - non-interactive-shell
 
-  - name: Add gcloud and tools to PATH for Root
-    blockinfile:
-      path: /root/.bashrc
-      block: |
-        export GOOGLE_APPLICATION_CREDENTIALS=/root/.gcloud/gsa-key.json
-        # The next line updates PATH for the Google Cloud SDK.
-        if [ -f '/var/google-tools-install/google-cloud-sdk/path.bash.inc' ]; then source '/var/google-tools-install/google-cloud-sdk/path.bash.inc'; fi
-
-        # The next line enables shell command completion for gcloud.
-        if [ -f '/var/google-tools-install/google-cloud-sdk/completion.bash.inc' ]; then source '/var/google-tools-install/google-cloud-sdk/completion.bash.inc'; fi
-      marker: "# { mark } Added by Ansible google-tools task"
+  - name: Add gcloud BASH completion
+    lineinfile:
+      path: /etc/profile.d/gcloud_auth.sh
+      line: "gcloud auth activate-service-account --key-file={{ remote_gsa_key }}/gsa-key.json --project {{ google_project_id }}"
+      state: present
+      create: yes
     tags:
     - profile
     - initial-install
+    - non-interactive-shell
+    - gcloud-setup
 
-  - name: Authenticate gcloud
-    shell: |
-      gcloud auth activate-service-account --key-file={{ remote_gsa_key }}/gsa-key.json --project {{ google_project_id }}
-      mkdir -p /root/.gcloud
-      cp {{ remote_gsa_key }}/gsa-key.json /root/.gcloud/gsa-key.json
-      export GOOGLE_APPLICATION_CREDENTIALS=/root/.gcloud/gsa-key.json
-      gcloud config configurations list
-      exit $?
-    args:
-      executable: /bin/bash
-      creates: /root/.gcloud/gsa-key.json
+### Switch current session to target-machine-gsa
+  - name: Switch to target-machine-gsa
+    command:
+      cmd: bash /etc/profile.d/gcloud_auth.sh
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
     tags:
-    - initial-install
-    - tool-install
+      - initial-install
 
   - name: Enable services
     command:
       # https://cloud.google.com/anthos/clusters/docs/bare-metal/1.6/installing/install-prereq#project_prerequisites
-      cmd: gcloud services enable anthos.googleapis.com anthosgke.googleapis.com cloudresourcemanager.googleapis.com container.googleapis.com gkeconnect.googleapis.com gkehub.googleapis.com serviceusage.googleapis.com stackdriver.googleapis.com monitoring.googleapis.com logging.googleapis.com secretmanager.googleapis.com --project={{ google_project_id }}
+      cmd: gcloud services enable anthos.googleapis.com connectgateway.googleapis.com anthosgke.googleapis.com cloudresourcemanager.googleapis.com container.googleapis.com gkeconnect.googleapis.com gkehub.googleapis.com serviceusage.googleapis.com stackdriver.googleapis.com monitoring.googleapis.com logging.googleapis.com secretmanager.googleapis.com --project={{ google_project_id }}
     run_once: true # only one machine to do this
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
@@ -162,15 +173,28 @@
     - initial-install
     - tool-install
 
+### IF upgrading BMCTL, remove existing
+  - name: Remove bmctl
+    ansible.builtin.file:
+      path: "/usr/local/bin/bmctl"
+      state: absent
+    when:
+      - force_tools_upgrade is defined
+      - force_tools_upgrade == True
+    tags:
+      - initial-install
+      - tool-install
+
+### Find versions with:  gsutil ls -al gs://anthos-baremetal-release/bmctl
   - name: Install Anthos Bare Metal CLI
     shell: |
       gsutil cp gs://anthos-baremetal-release/bmctl/{{ bmctl_version }}/linux-amd64/bmctl {{ tools_base_path }}
       chmod a+x {{ tools_base_path }}/bmctl
-      mv {{ tools_base_path }}/bmctl /usr/bin/bmctl
+      mv {{ tools_base_path }}/bmctl /usr/local/bin/bmctl
       bmctl version
       exit $?
     args:
-      creates: /usr/bin/bmctl
+      creates: /usr/local/bin/bmctl
       executable: /bin/bash
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
