--- a/anthos-baremetal-edge-deployment/inventory/group_vars/all.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/group_vars/all.yaml
@@ -14,6 +14,22 @@
 
 ---
 
+#######
+
+# These are the most commonly changed variables for a particular provisioning
+
+####
+#### Anthos Config Management
+####
+acm_root_repo: "{{ lookup('env', 'ROOT_REPO_URL') | default('https://gitlab.com/gcp-solutions/app-mod/sm002-consumer-edge/consumer-retail-edge/root-repo-usa-market.git', True) }}"
+
+
+#######
+
+
+# All ansible interactions are using this user during provisioning
+ansible_user: abm-admin
+
 # Variables assigned to all inventory
 
 google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
@@ -22,57 +38,116 @@ google_zone: "{{ lookup('env', 'ZONE') | default('us-central1-a', True) }}"
 local_gsa_key: "{{ lookup('env', 'LOCAL_GSA_FILE') }}"
 tools_base_path: "/var/google-tools-install"
 
+kubeconfig_shared_root: "/var/kubeconfig"
+kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
+
+# Latest version can be found: gsutil ls -al gs://anthos-baremetal-release/bmctl
+# Version of Anthos Bare Metal to install
+abm_version: "1.8.2" # verify coupling of ABM to BMCTL versions
+# bmctl binary version
+#TODO: set this up to query for the version, then upgrade automatically if updated
+bmctl_version: "1.8.2" # If changed, set the `force_tools_upgrade` to true so new version of BMCTL is downloaded
+
+# gsutil ls -al gs://config-management-release/released/
+# Anthos Config Management
+acm_version: "1.8.1"
+
+# Force Upgrade of tools (typically used when updating the ABM version above)
+force_tools_upgrade: false
+
 # SCM (GitLab, GitHub access token)
 scm_token_user: "{{ lookup('env', 'SCM_TOKEN_USER') }}"
 scm_token_token: "{{ lookup('env', 'SCM_TOKEN_TOKEN') }}"
 
-gcs_bucket_guest_vm: "anthos-consumer-edge-vm-isos"
-vm_guest_image: "windows-server-2016-eval-en-us.iso"
+#Secret name for longhorn to take backups of volumes and send to cloud storage bucket
+volume_backup_secret_name: gcp-cloud-storage-backup-secret
 
-# ACM (using 'token' method)
-acm_root_repo: "https://gitlab.com/mike-ensor/acm-multi-root-demo.git"
+# All of the Service Accounts used in this solution
+service_accounts: [
+  {
+    name: abm-gcr-agent,
+    keyfile: abm-gcr-agent-creds.json,
+    description: "ABM GCR Agent Account",
+    roles: [
+      "roles/storage.objectViewer"
+    ]
+  },
+  {
+    name: abm-gke-connect-agent,
+    keyfile: abm-gke-connect-agent-creds.json,
+    description: "ABM GKE Connect Agent Service Account",
+    roles: [
+      "roles/gkehub.connect"
+    ]
+  },
+  {
+    name: abm-gke-register-agent,
+    keyfile: abm-gke-register-agent-creds.json,
+    description: "ABM GKE Connect Register Account",
+    roles: [
+      "roles/gkehub.admin"
+    ]
+  },
+  {
+    name: abm-cloud-operations-agent,
+    keyfile: abm-cloud-operations-agent-creds.json,
+    description: "ABM Cloud Operations Service Account",
+    roles: [
+      "roles/logging.logWriter",
+      "roles/monitoring.metricWriter",
+      "roles/stackdriver.resourceMetadata.writer",
+      "roles/monitoring.dashboardEditor"
+    ]
+  },
+  {
+    name: external-secrets-k8s,
+    keyfile: external-secrets-k8s-creds.json,
+    description: "External Secrets Service Account",
+    roles: [
+      "roles/secretmanager.secretAccessor",
+      "roles/secretmanager.viewer"
+    ]
+  },
+  {
+    name: longhorn-cloud-storage,
+    keyfile: longhorn-cloud-storage-creds.json,
+    description: "Longhorn taking volume backups on cloud stoarge ",
+    roles: [
+      "roles/storage.objectAdmin"
+    ]
+  },
+  {
+    name: gateway-connect-agent,
+    keyfile: gateway-connect-agent-creds.json,
+    description: "Agent used for Gateway Connect",
+    roles: [
+      "roles/gkehub.gatewayAdmin",
+      "roles/gkehub.viewer"
+    ]
+  }
+]
 
+# git_creds_gcp_secret_name is the secret created to hold the Git PAT info corresponding to that Namespace Repo
+# franchise_name, franchise_number aren't used
+# Stores: not used now, secrets are created for all franchises in GCP Secrets Manager, ExternalSecrets are controlled in the root-repo for each franchise
+#      Associations of franchise/store -> cluster is done at the inventory level on "acm_cluster_name" (an unique name across the cluster space)
+
+## All this does is create the git-creds for the different ExternalSecrets used in Namespace Repos
 franchises: [
   {
-    franchise_number: "1",
-    git_creds_gcp_secret_name: "franchise-1-git-creds",
-    franchise_name: "ACME",
+    franchise_number: "123", # DEPRECATED
+    git_creds_gcp_secret_name: "global-lab-git-creds", # Secret to access the namespace repo containing the franchise's information
+    franchise_name: "Global McD", # DEPRECATED
     stores: [
-      "nuc-1",
-      "nuc-2"
+      "edge-2" # store-usa-123-1
     ]
   },
   {
-    franchise_name: "Innotec",
-    franchise_number: "2",
-    git_creds_gcp_secret_name: "franchise-2-git-creds",
+    franchise_name: "Chicago McD",
+    franchise_number: "234",
+    git_creds_gcp_secret_name: "northam-lab-git-creds",
     stores: [
-      "nuc-3",
-      "nuc-4"
-    ]
-  },
-  {
-    franchise_name: "Penatrode",
-    franchise_number: "3",
-    git_creds_gcp_secret_name: "franchise-3-git-creds",
-    stores: [
-      "nuc-5"
-    ]
-  },
-  {
-    franchise_name: "UberTrinken",
-    franchise_number: "4",
-    git_creds_gcp_secret_name: "franchise-3-git-creds",
-    stores: [
-      "cnuc-1"
-    ]
-  },
-  {
-    franchise_name: "MassLitre",
-    franchise_number: "5",
-    git_creds_gcp_secret_name: "franchise-3-git-creds",
-    stores: [
-      "cnuc-2"
+      "edge-1" # store-usa-234-3
     ]
   }
 ]
