--- a/anthos-baremetal-edge-deployment/inventory/group_vars/cloud_type_abm.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/group_vars/cloud_type_abm.yaml
@@ -15,5 +15,10 @@
 # Variables associated with the cloud installation inventory
 
 # Required for GCE SSH
-ansible_user: abm-admin
 ansible_ssh_private_key_file: "~/.ssh/cnucs-cloud"
+
+# Automation setting for "is cloud"
+is_cloud_resource: true
+
+# Use QEMU emulation on devices belonging to the cloud
+kubevirt_use_emulation: true
