--- a/anthos-baremetal-edge-deployment/inventory/group_vars/workers.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/group_vars/workers.yaml
@@ -14,3 +14,8 @@
 
 # Variables associated with the physical NUC installation inventory
 ansible_user: abm-admin
+
+# automation setting for this is not a cloud resource
+is_cloud_resource: false
+
+kubevirt_use_emulation: false
