--- a/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-2.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-2.yaml
@@ -11,16 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# Name of the cluster
+cluster_name: "cnuc-1"
+# Used for logging/metrics
+machine_label: "cnuc-2"
 
-
-## Vars specifically for CNUC2
-
-cluster_name: "cnuc-2"
-#cluster_index: 10
-acm_cluster_name: "store-4-2"
-control_plane_ip: "10.200.0.3" # TODO: Not functional yet, hardcoded in the config file right now
-control_plane_vip: "10.200.0.49"
-ingress_vip: "10.200.0.50"
-load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
-
-primary_ip: "10.200.0.2"
+# This machine's IP
+control_plane_ip: "10.200.0.3"
