--- a/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-4.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-4.yaml
@@ -15,15 +15,30 @@
 
 ## Vars specifically for CNUC4
 
+# Name of the cluster
 cluster_name: "cnuc-4"
+# Used for logging/metrics
+machine_label: "cnuc-4"
+
+# Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
-acm_cluster_name: "store-5-1"
+# Name of the "store" per the ACM repo
+acm_cluster_name: "store-global"
+
+# This machine's IP
 control_plane_ip: "10.200.0.2"
+# The other IPs in the cluster
 control_plane_ips: [
   "10.200.0.2",
   "10.200.0.3",
   "10.200.0.4"
 ]
+# KubeAPI IP address
 control_plane_vip: "10.200.0.49"
+# Ingress (k8s) address, must be in LoadBalancer pool below
 ingress_vip: "10.200.0.50"
-load_balancer_pool_cidr: "10.200.0.50-10.200.0.70"
+
+# Load balancers created in this range
+load_balancer_pool_cidr: [
+  "10.200.0.50-10.200.0.70"
+]
