--- a/anthos-baremetal-edge-deployment/inventory/host_vars/nuc-3.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/nuc-3.yaml
@@ -11,10 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# Cluster Name
+cluster_name: "nuc-1"
+# Used for logging/metrics
+machine_label: "nuc-3"
 
-cluster_name: "nuc-3"
-cluster_index: 2
-acm_cluster_name: "store-1-3"
+# This machine's IP
 control_plane_ip: "192.168.1.13"
-
-primary_ip: "192.168.1.11"
