--- a/anthos-baremetal-edge-deployment/roles/abm-install/tasks/main.yml
+++ b/anthos-baremetal-edge-deployment/roles/abm-install/tasks/main.yml
@@ -15,6 +15,8 @@
 ---
 # tasks file for abm-install
 
+### gcloud auth to target-machine-gsa done in google-tools
+
 ### Create or enable Google Service Accounts
   - name: Create or Enable Service Accounts
     shell: |
@@ -34,7 +36,6 @@
       creates: /var/nothing
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
-      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
     tags:
     - abm-install
     - abm-once
@@ -46,7 +47,6 @@
     run_once: true
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
-      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
     tags:
     - abm-install
     - abm-once
@@ -75,7 +75,6 @@
     loop: "{{ service_accounts }}"
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
-      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
     tags:
     - abm-once
     - abm-debug
@@ -96,7 +95,6 @@
       loop_var: entry
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
-      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
     tags:
     - abm-once
     - abm-debug
@@ -112,12 +110,40 @@
     loop: "{{ service_accounts }}"
     environment:
       PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
-      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
     tags:
     - abm-once
     - abm-debug
     - abm-gsa-keys
     - abm-install
+
+  - name: Create new HMAC key for longhorn backup to cloud stoarge and push to Secret Manager
+    run_once: true # only one machine to do this
+    shell: |
+      gsutil hmac create longhorn-cloud-storage@{{ google_project_id }}.iam.gserviceaccount.com > /tmp/hmackey.txt
+      access_key=`cat  /tmp/hmackey.txt  | awk  -F: '{print $2}' | xargs | awk '{print $1}'`
+      access_secret=`cat  /tmp/hmackey.txt  | awk  -F: '{print $2}' | xargs | awk '{print $2}'`
+      echo "{\"access_key\": \"${access_key}\",  \"access_secret\": \"${access_secret}\" , \"endpoint\" : \"https://storage.googleapis.com\" }" > /tmp/hmacsecret.json
+      gcloud secrets create {{ longhorn_secret_name }} --replication-policy="automatic" --project="{{ google_project_id }}"
+      gcloud secrets versions add {{ longhorn_secret_name }} --data-file="/tmp/hmacsecret.json"
+      rm -rf /tmp/hmacsecret.json /tmp/hmackey.txt # delete temp file
+      exit $?
+    args:
+      executable: /bin/bash
+    tags:
+    - abm-once
+    - longhorn-hmac-keys
+    - abm-install
+
+### Create or ensure the /customer folder exists
+###TODO Make this /customer configuration and link to Longhorn config
+  - name: Create the /customer folder if needs
+    ansible.builtin.file:
+      path: /customer
+      state: directory
+      mode: '0755'
+    tags:
+    - abm-install
+    - abm-config
 
 ### Create Local PVC folder (future will be mounted or something)
   - name: Create PVC Folder
@@ -162,6 +188,30 @@
     - abm-create
     - build-config
 
+### For caution, re-run setup of VXLAN
+  - name: Run startup for vxlan
+    command:
+      cmd: "/var/setup-vxlan.sh"
+    when:
+      - is_cloud_resource is defined
+      - is_cloud_resource == True
+    tags:
+    - network-vxlan
+    - abm-install
+    - abm-config
+
+### Run VXLAN is up script (only for cloud resources)
+  - name: Run script for vxlan status
+    command:
+      cmd: "/var/vxlan-status-check.sh"
+    when:
+      - is_cloud_resource is defined
+      - is_cloud_resource == True
+    tags:
+    - network-vxlan
+    - abm-install
+    - abm-config
+
 ### Check cluster configuration
   - name: Validate configuration file updates
     command:
@@ -182,11 +232,14 @@
 ### Create cluster configuration
   - name: "Create cluster {{ cluster_name }} -- (be patient, this takes 20-40 minutes)"
     command: bmctl create cluster --cluster={{ cluster_name }}
-    when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
+    when:
+      - primary_cluster_machine is defined
+      - abm_installed.stat.exists == False
+      - primary_cluster_machine == True
     args:
       chdir: "{{ abm_install_folder }}"
       creates: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
-    async: 3600 # run for up to 60 minutes
+    async: 7200 # run for up to 60 minutes
     #poll: 30 # poll status every 30 seconds
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
@@ -194,7 +247,24 @@
     - abm-install
     - abm-create
 
-### TODO: Add a "if fails" then remove the cluster `bmctl reset -c {{ cluster_name }}`
+  - name: Re-gather facts
+    setup:
+    when: ansible_facts == {}
+    tags:
+    - abm-check-membership
+
+  - name: Check if membership exists
+    run_once: true
+    shell: gcloud container hub memberships describe {{ cluster_name }} --format="value(name)" --project {{ google_project_id }}
+    args:
+      executable: /bin/bash
+    environment:
+      PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
+      GOOGLE_APPLICATION_CREDENTIALS: "/var/keys/gsa-key.json"
+    tags:
+    - abm-install
+    - abm-verify-install
+    - abm-check-membership
 
 #### Post Install Activities
   - name: Create PVC Folder
@@ -206,6 +276,14 @@
     - abm-install
     - abm-post-install
 
+### Setup kubeconfig for all clusters
+  - name: "Share kubeconfig with others in cluster"
+    include: share-kubeconfig.yml
+    tags:
+    - abm-post-install
+    - abm-install
+    - kubeconfig-share
+
   - name: "Setup profile.d for kubeconfig"
     template:
       src: profile-user.sh.j2
@@ -213,48 +291,3 @@
     tags:
     - abm-install
     - abm-post-install
-
-  - name: Set insecure permissions to allow kubens to modify configuration when not root
-    ansible.builtin.file:
-      path: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
-      mode: '0666' # allow read/write to all (yes, this is maybe not great, but useful for kubens)
-    tags:
-    - abm-post-install
-    - abm-install
-
-  - name: Symbolic link to kubeconfig
-    ansible.builtin.file:
-      src: "{{ abm_install_folder }}/bmctl-workspace/{{ cluster_name }}/{{ cluster_name }}-kubeconfig"
-      dest: "{{ kubeconfig_shared_location }}"
-      group: sudo
-      state: link
-    when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
-    tags:
-    - abm-post-install
-    - abm-install
-
-  # Copy the kubeconfig to local via primary machine
-  - name: Copy generated kubeconfig to local
-    fetch:
-      src: "{{ kubeconfig_shared_location }}"
-      dest: "/tmp/kubeconfig"
-      flat: yes
-    when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
-    tags:
-    - abm-post-install
-    - abm-install
-    - kubeconfig-share
-
-  - name: Copy the kubeconfig to other machines in cluster
-    ansible.builtin.copy:
-      src: "/tmp/kubeconfig"
-      dest: "{{ kubeconfig_shared_location }}"
-      remote_src: no
-    when: "(primary_cluster_machine is not defined) or (primary_cluster_machine == false)"
-    tags:
-    - abm-post-install
-    - abm-install
-    - kubeconfig-share
-
-
-# DONE
