--- a/anthos-baremetal-edge-deployment/roles/abm-post-install/tasks/main.yml
+++ b/anthos-baremetal-edge-deployment/roles/abm-post-install/tasks/main.yml
@@ -12,11 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-#
+# These are post-installation steps that address defects/bugs or are needed after the system has been fully setup
 
+#TODO use kubectl wait command instead of brute force 'sleep'
 - name: "Stackdriver patch for bug b/193159157"
   shell: |
-    kubectl patch stackdriver stackdriver --type=merge -p '{"spec":{"scalableMonitoring": "false"}}' -n kube-system
+    kubectl -n kube-system scale deploy stackdriver-operator --replicas=0
+    sleep 5s # wait for stop
+    kubectl patch stackdriver stackdriver --type=merge -p '{"spec":{"scalableMonitoring": false}}' -n kube-system
+    kubectl -n kube-system scale deploy stackdriver-operator --replicas=1
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   when:
@@ -25,3 +29,34 @@
   tags:
   - abm-post-install
   - active-bug-fix
+
+### Add Kube PS1
+- name: "Add Kube PS1 to all known users"
+  include: add-kube-ps1.yml
+  become: true
+  tags:
+  - abm-post-install
+  - kube-ps1
+
+### Setup CDI cpumanager flag for nodes
+- name: "Add CDI required cpumanager label for nodes"
+  include: create-cdi-node-label.yaml
+  tags:
+  - abm-post-install
+  - cdi-install
+  - cdi-node-hack
+
+### Install Auditd
+- name: "Setup Auditd service"
+  include: setup-auditd.yml
+  tags:
+  - abm-post-install
+  - observability-setup
+
+ ### Install Obeservability agents
+- name: "Setup Obeservability Agents on Physical"
+  include: setup-google-observability.yml
+  when: is_cloud_resource is undefined or is_cloud_resource == False
+  tags:
+  - abm-post-install
+  - observability-setup
