--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ point-of-sale-app/api-server/src/main/resources/public/*
 # exception to the rule
 !point-of-sale-app/api-server/src/main/resources/public/.gitkeep
 diff
+remote-gsa-key.json
