fix: the ansible plugin

--- a/anthos-baremetal-edge-deployment/templates/inventory-cloud-example.yaml
+++ b/anthos-baremetal-edge-deployment/templates/inventory-cloud-example.yaml
@@ -17,7 +17,7 @@
 
 # envsubt < inventory-cloud-example.yaml > inventory/gcp.yaml
 
-plugin: google.cloud.compute
+plugin: gcp_compute
 projects:
   - "${PROJECT_ID}"
 regions:
