--- a/point-of-sale-app/api-server/pom.xml
+++ b/point-of-sale-app/api-server/pom.xml
@@ -137,6 +137,37 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>com.google.cloud.artifactregistry</groupId>
+				<artifactId>artifactregistry-maven-wagon</artifactId>
+				<version>2.1.1</version>
+			</extension>
+		</extensions>
 	</build>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>artifact-registry</id>
+			<url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+		</snapshotRepository>
+		<repository>
+			<id>artifact-registry</id>
+			<url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+		</repository>
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>artifact-registry</id>
+			<url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
