--- a/point-of-sale-app/payments/pom.xml
+++ b/point-of-sale-app/payments/pom.xml
@@ -44,11 +44,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.google.abm-edge</groupId>
-			<artifactId>service-sdk</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
-		</dependency>
+    <dependency>
+      <groupId>com.google.abm-edge</groupId>
+      <artifactId>service-sdk</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -106,5 +106,37 @@
         </executions>
       </plugin>
     </plugins>
+    <extensions>
+      <extension>
+        <groupId>com.google.cloud.artifactregistry</groupId>
+        <artifactId>artifactregistry-maven-wagon</artifactId>
+        <version>2.1.1</version>
+      </extension>
+    </extensions>
   </build>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>artifact-registry</id>
+      <url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+    </snapshotRepository>
+    <repository>
+      <id>artifact-registry</id>
+      <url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+    </repository>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>artifact-registry</id>
+      <url>artifactregistry://us-central1-maven.pkg.dev/abm-edge-test/anthos-baremetal-edge</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
 </project>
