fix: add latest tag

--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: api-server
-        image: us-central1-docker.pkg.dev/abm-edge-test/abm-edge-point-of-sale/gcr.io/abm-edge-test/api-server
+        image: us-central1-docker.pkg.dev/abm-edge-test/abm-edge-point-of-sale/gcr.io/abm-edge-test/api-server:latest
         env:
         - name: INVENTORY_EP
           valueFrom:
